# v2raya_subupdater

./: README.md  pyproject.toml  run_scheduler.sh  v2ray-updater.service  v2ray-updater.timer
v2ray_update_sub/: config.yaml  main.py
